--- a/style.css
+++ b/style.css
@@ -1,59 +1,33 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  .container {
-    width: 60%;
-    margin: 0 auto;
-  }
-  
-  .header {
-    text-align: center;
-    padding: 20px 0;
-  }
-  
-  .months {
-    display: flex;
-  }
-  
-  .month {
-    width: 100%;
-    margin-right: 20px;
-  }
-  
-  .month h2 {
-    text-align: center;
-    margin-bottom: 20px;
-    font-size: 25px;
-  }
-  
-  .weekdays {
-    display: flex;
-    list-style: none;
-    background-color: #ddd;
-    justify-content: space-between;
-    padding: 10px;
-  }
-  
-  .weekdays li {
-    width: calc(100% / 7);
-    text-align: center;
-  }
-  
-  .days {
-    display: flex;
-    flex-wrap: wrap;
-    list-style: none;
-    margin-bottom: 20px;
-  }
-  
-  .days li {
-    width: calc(100% / 7);
-    text-align: center;
-    margin-bottom: 10px;
-    padding: 10px;
-    background-color: #eee;
-  }
-  
+.container {
+  text-align: center;
+  margin-top: 100px;
+}
+
+h1 {
+  font-size: 24px;
+}
+
+form {
+  margin-top: 20px;
+}
+
+label {
+  display: block;
+  margin-bottom: 10px;
+}
+
+input {
+  padding: 5px;
+}
+
+button {
+  padding: 10px 20px;
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #45a049;
+}
