--- a/style.css
+++ b/style.css
@@ -1,5 +1,18 @@
-body {
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
+#game-container {
+  position: relative;
+  width: 600px;
+  height: 400px;
+  border: 1px solid black;
+}
+#player {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  background-color: blue;
+}
+#enemy {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  background-color: red;
 }
