--- a/style.css
+++ b/style.css
@@ -1,82 +1,46 @@
-/* Estilos generales */
 body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #f2f2f2;
   font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
 }
 
-.container {
-  max-width: 960px;
-  margin: 0 auto;
-  padding: 20px;
-}
-
-/* Estilos de la barra de navegación */
-header {
-  background-color: #333;
-  color: #fff;
-  padding: 10px;
-}
-
-nav ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-
-nav ul li {
-  display: inline;
-  margin-right: 10px;
-}
-
-nav ul li a {
-  color: #fff;
-  text-decoration: none;
-}
-
-/* Estilos de la sección de inicio */
-#inicio {
-  background-color: #f2f2f2;
-  text-align: center;
-  padding: 50px;
-}
-
-/* Estilos de la sección de portafolio */
-#portafolio {
+.calculator {
   background-color: #fff;
-  padding: 50px;
-}
-
-.image-gallery img {
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
   width: 300px;
-  margin-bottom: 20px;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
 }
 
-/* Estilos de la sección de texto */
-#texto {
-  background-color: #f2f2f2;
-  padding: 50px;
-}
-
-.highlight {
-  font-weight: bold;
-  color: #ff0000;
-}
-
-.underline {
-  text-decoration: underline;
-}
-
-/* Estilos de la sección de contacto */
-#contacto {
-  background-color: #fff;
-  padding: 50px;
-}
-
-/* Estilos del footer */
-footer {
-  background-color: #333;
-  color: #fff;
-  text-align: center;
+#result {
+  border: none;
+  background-color: #f9f9f9;
+  border-radius: 3px;
+  margin-bottom: 10px;
   padding: 10px;
+  font-size: 18px;
+}
+
+.keypad {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 5px;
+}
+
+button {
+  border: none;
+  border-radius: 3px;
+  padding: 10px;
+  background-color: #e0e0e0;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+button:active {
+  background-color: #d1d1d1;
 }
